5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1577_994.log
== TEST (2019-03-14 19:03:05) 
-- CODE:
print("Universidade Federal do Amazonas") 
print()
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:05:51) 
-- CODE:
print("Universidade Federal do Amazonasprint")
-- EXECUTION TIME:
0.150778
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonasprint
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:06:26) 
-- CODE:
print(Universidade Federal do Amazonas)
-- EXECUTION TIME:
0.119898
-- ERROR:
  File "/home/codebench/codes/1577/994/main.py", line 1
    print(Universidade Federal do Amazonas)
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:07:19) 
-- CODE:
print Universidade Federal do Amazonas

-- EXECUTION TIME:
0.164882
-- ERROR:
  File "/home/codebench/codes/1577/994/main.py", line 1
    print Universidade Federal do Amazonas
                     ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:08:03) 
-- CODE:
print ("Universidade Federal do Amazonas")

-- EXECUTION TIME:
0.143608
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
